--- a/templates/index.html
+++ b/templates/index.html
@@ -211,7 +211,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand logo" href="#" data-translate-key="navbarBrand">
-          <i class="fas fa-music"></i> YT Music Downloader
+          <i class="fas fa-music"></i>Download Music from Link YouTube
         </a>
         <button
           class="navbar-toggler"
