--- a/templates/index.html
+++ b/templates/index.html
@@ -763,7 +763,7 @@
         },
         id: {
           pageTitle: "Pengunduh Musik YouTube - Versi Web",
-          navbarBrand: "Pengunduh Musik YT",
+          navbarBrand: "Pengunduh Musik YouTube",
           navHome: "Beranda",
           navBatch: "Unduh Massal",
           navHistory: "Riwayat",
